Fixed all image resizing on mobile

--- a/template2/css/carousel.css
+++ b/template2/css/carousel.css
@@ -39,7 +39,6 @@ body {
 
 /* Carousel base class */
 .carousel {
-  height: 500px;
   margin-bottom: 60px;
 }
 /* Since positioning the image, we need to help out the caption */
@@ -49,15 +48,7 @@ body {
 
 /* Declare heights because of positioning of img element */
 .carousel .item {
-  height: 500px;
   background-color: #777;
-}
-.carousel-inner > .item > img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  min-width: 100%;
-  height: 500px;
 }
 
 
@@ -130,5 +121,11 @@ body {
 @media (min-width: 992px) {
   .featurette-heading {
     margin-top: 120px;
+  }
+}
+
+@media (max-width: 768px) {
+  .carousel {
+    display:none;
   }
 }
